--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,18 @@ repositories {
     maven {
         url  "https://dl.bintray.com/kotlin/exposed"
     }
+    maven {
+        url  "https://dl.bintray.com/kittinunf/maven"
+    }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile 'org.jetbrains.exposed:exposed:0.17.7'
+    implementation 'com.github.kittinunf.fuel:fuel:2.2.1'
+    implementation 'com.github.kittinunf.fuel:fuel-jackson:2.2.1'
+    implementation 'org.jetbrains.exposed:exposed:0.17.7'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
 
 
 }
