--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'com.github.johnrengelman.shadow' version '2.0.2'
 }
 
 group 'org.smurfville'
@@ -20,6 +21,7 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel:2.2.1'
     implementation 'com.github.kittinunf.fuel:fuel-jackson:2.2.1'
     implementation 'org.jetbrains.exposed:exposed:0.17.7'
+    implementation 'io.github.cdimascio:java-dotenv:5.1.3'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
 
