--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
-    id 'com.github.johnrengelman.shadow' version '2.0.2'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
+apply plugin: 'application'
 
 group 'org.smurfville'
 version '1.0-SNAPSHOT'
+
 
 repositories {
     mavenCentral()
@@ -24,8 +26,6 @@ dependencies {
     implementation 'io.github.cdimascio:java-dotenv:5.1.3'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
-
-
 }
 
 compileKotlin {
@@ -33,4 +33,14 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+// Define the main startup class and jar name
+mainClassName = 'org.smurfville.AppKt'
+archivesBaseName = 'sync-listenbrainz'
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.smurfville.AppKt'
+    }
 }
