--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel-jackson:2.2.1'
     implementation 'org.jetbrains.exposed:exposed:0.17.7'
     implementation 'io.github.cdimascio:java-dotenv:5.1.3'
-    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.16'
 }
 
 compileKotlin {
