--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
           echo ${TAGS}
           echo ::set-output name=tags::${TAGS}
 
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@master
-#        with:
-#          platforms: linux/arm/v7
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: linux/arm/v7
 
       - name: Set up Docker Buildx
         id: buildx
@@ -55,6 +55,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           builder: ${{ steps.buildx.outputs.name }}
-#          platforms: linux/arm/v7
+          platforms: linux/arm/v7
           push: true
           tags: ${{ steps.prep.outputs.tags }}
