--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
       - uses: FranzDiebold/github-env-vars-action@v1.2.0
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11' # The JDK version to make available on the path.
+          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+          architecture: x64 # (x64 or x86) - defaults to x64
 
       - name: Prepare
         id: prep
@@ -50,11 +54,14 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/arm/v7
-          push: true
-          tags: ${{ steps.prep.outputs.tags }}
+      - name: Build with gradle
+        run: ./gradlew --no-daemon --info --stacktrace shadowJar
+
+#      - name: Build and push
+#        id: docker_build
+#        uses: docker/build-push-action@v2
+#        with:
+#          builder: ${{ steps.buildx.outputs.name }}
+#          platforms: linux/arm/v7
+#          push: true
+#          tags: ${{ steps.prep.outputs.tags }}
