--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Build with gradle
         uses: eskatos/gradle-command-action@v1
         with:
+          gradle-version: 6.6
           arguments: --info shadowJar
 
 #      - name: Build and push
