--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,18 +10,41 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  build-app:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - uses: FranzDiebold/github-env-vars-action@v1.2.0
       - uses: actions/setup-java@v1
         with:
           java-version: '11' # The JDK version to make available on the path.
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
 
+      - run: ls -lash
+      - run: pwd
+      - name: Build with gradle
+        uses: eskatos/gradle-command-action@v1
+        with:
+          gradle-version: 6.6
+          arguments: --info shadowJar
+          wrapper-cache-enabled: true
+          dependencies-cache-enabled: true
+          configuration-cache-enabled: true
+
+      - run: ls -lash ./build/libs/
+
+      - name: Upload build output
+        uses: actions/upload-artifact@v2
+        with:
+          name: output
+          path: ./build/libs/sync-listenbrainz-1.0-SNAPSHOT-all.jar
+
+  build-docker-image:
+    needs: build-app
+    runs-on: ubuntu-latest
+    steps:
+      - uses: FranzDiebold/github-env-vars-action@v1.2.0
       - name: Prepare
         id: prep
         run: |
@@ -31,43 +54,40 @@ jobs:
           echo ${TAGS}
           echo ::set-output name=tags::${TAGS}
 
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@master
-#        with:
-#          platforms: linux/arm/v7
-#
-#      - name: Set up Docker Buildx
-#        id: buildx
-#        uses: docker/setup-buildx-action@master
-#
-#      - name: Cache Docker layers
-#        uses: actions/cache@v2
-#        with:
-#          path: /tmp/.buildx-cache
-#          key: ${{ runner.os }}-buildx-${{ github.sha }}
-#          restore-keys: |
-#            ${{ runner.os }}-buildx-
-#      - name: Login to ghcr
-#        uses: docker/login-action@v1
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.repository_owner }}
-#          password: ${{ secrets.GHCR_TOKEN }}
-      - run: ls -lash
-      - run: pwd
-      - name: Build with gradle
-        uses: eskatos/gradle-command-action@v1
+      - name: Download output from job 1
+        uses: actions/download-artifact@v2
         with:
-          gradle-version: 6.6
-          arguments: --info shadowJar
+          name: output
 
-      - run: ls -lash ./build/libs/
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: linux/arm/v7
 
-#      - name: Build and push
-#        id: docker_build
-#        uses: docker/build-push-action@v2
-#        with:
-#          builder: ${{ steps.buildx.outputs.name }}
-#          platforms: linux/arm/v7
-#          push: true
-#          tags: ${{ steps.prep.outputs.tags }}
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Login to ghcr
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/arm/v7
+          push: true
+          tags: ${{ steps.prep.outputs.tags }}
